unpackaged/main/default/objects/project_cloud__Cross_Project_View__c/project_cloud__Cross_Project_View__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Cross Project View</label>
</CustomObject>