unpackaged/main/default/objects/project_cloud__Cross_Project_View__c/fields/project_cloud__Gantt_Tab_IsDefault__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Gantt_Tab_IsDefault__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Default to the Gantt Tab</label>
    <type>Checkbox</type>
</CustomField>