unpackaged/main/default/objects/project_cloud__Cross_Project_View__c/fields/project_cloud__Show_Stage_Gates_Tab__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Show_Stage_Gates_Tab__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Stage Gates Tab (PPM Required)</label>
    <type>Checkbox</type>
</CustomField>